Trocando os links do csv

--- a/Projeto_Final_Módulo_5_[G9].ipynb
+++ b/Projeto_Final_Módulo_5_[G9].ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1wVUVGDtvYNdDbWy7ojETM9xwdCjgrCU8",
-      "authorship_tag": "ABX9TyPUEqke72uMOmOHDtNKafrk",
+      "authorship_tag": "ABX9TyOvwL6yaDeQrf+WVIOCQC1B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "\n",
         "*  Luana Taynara\n",
         "  - [GitHub](https://github.com/lu-taynara)\n",
-        "  - LinkedIn\n",
+        "  - [LinkedIn](https://www.linkedin.com/in/luanat-silva)\n",
         "\n",
         "*  Vinícius Costa Souto\n",
         "  - [GitHub](https://github.com/ViniciusCostaSouto)\n",
@@ -229,7 +229,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data_2019 = pd.read_csv(\"/content/drive/MyDrive/Projeto_Final_Modulo_V/Ano-2019.csv\", sep= ';', dtype={'cpf': 'str'})\n",
+        "data_2019 = pd.read_csv(\"https://raw.githubusercontent.com/ViniciusCostaSouto/Projeto-Modulo-5-Grupo-9/main/Ano-2019.csv\", sep= ';', dtype={'cpf': 'str'})\n",
         "data_2019.head()"
       ],
       "metadata": {
@@ -238,16 +238,16 @@
           "height": 647
         },
         "id": "PnSJRearJXpd",
-        "outputId": "6c609f73-27aa-467a-8f9a-c685eeb7837c"
+        "outputId": "374deace-ca1e-4c6d-a2b3-dec16ea1e47f"
       },
-      "execution_count": 24,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-3586f674-89c2-4d88-9a86-cd974f2dd10b\">\n",
+              "  <div id=\"df-27a01478-1508-45d5-9562-f8df6d4ed6a1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -415,7 +415,7 @@
               "</table>\n",
               "<p>5 rows × 31 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3586f674-89c2-4d88-9a86-cd974f2dd10b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-27a01478-1508-45d5-9562-f8df6d4ed6a1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -466,12 +466,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3586f674-89c2-4d88-9a86-cd974f2dd10b button.colab-df-convert');\n",
+              "          document.querySelector('#df-27a01478-1508-45d5-9562-f8df6d4ed6a1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3586f674-89c2-4d88-9a86-cd974f2dd10b');\n",
+              "          const element = document.querySelector('#df-27a01478-1508-45d5-9562-f8df6d4ed6a1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -539,14 +539,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 43
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "data_2020 = pd.read_csv(\"/content/drive/MyDrive/Projeto_Final_Modulo_V/Ano-2020.csv\", sep= ';', dtype={'cpf': 'str'})\n",
+        "data_2020 = pd.read_csv(\"https://raw.githubusercontent.com/ViniciusCostaSouto/Projeto-Modulo-5-Grupo-9/main/Ano-2020.csv\", sep= ';', dtype={'cpf': 'str'})\n",
         "data_2020.head()"
       ],
       "metadata": {
@@ -555,16 +555,16 @@
           "height": 543
         },
         "id": "j79bMV330aXb",
-        "outputId": "b194a88a-3f63-41c6-d6fc-758bdc7ff48d"
+        "outputId": "c72807be-d2ab-48ad-c7ba-77ac793a98ec"
       },
-      "execution_count": 25,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-4ff90dc6-c77e-4754-84bb-a6396dedddda\">\n",
+              "  <div id=\"df-0caeb0c7-7e50-4f43-bd5c-c205bd1bb8fc\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -732,7 +732,7 @@
               "</table>\n",
               "<p>5 rows × 31 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4ff90dc6-c77e-4754-84bb-a6396dedddda')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0caeb0c7-7e50-4f43-bd5c-c205bd1bb8fc')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -783,12 +783,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4ff90dc6-c77e-4754-84bb-a6396dedddda button.colab-df-convert');\n",
+              "          document.querySelector('#df-0caeb0c7-7e50-4f43-bd5c-c205bd1bb8fc button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4ff90dc6-c77e-4754-84bb-a6396dedddda');\n",
+              "          const element = document.querySelector('#df-0caeb0c7-7e50-4f43-bd5c-c205bd1bb8fc');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -856,14 +856,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 44
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "data_2021 = pd.read_csv(\"/content/drive/MyDrive/Projeto_Final_Modulo_V/Ano-2021.csv\", sep= ';', dtype={'cpf': 'str'})\n",
+        "data_2021 = pd.read_csv(\"https://raw.githubusercontent.com/ViniciusCostaSouto/Projeto-Modulo-5-Grupo-9/main/Ano-2021.csv\", sep= ';', dtype={'cpf': 'str'})\n",
         "data_2021.head()"
       ],
       "metadata": {
@@ -872,16 +872,16 @@
           "height": 647
         },
         "id": "5_hMeIPT4Kae",
-        "outputId": "9a30d578-433d-4158-aba5-9088f943111d"
+        "outputId": "76509502-1157-48f7-b44a-7fe55af1b8e8"
       },
-      "execution_count": 26,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-483e1950-f5c0-42d1-8aca-942b6dc2d500\">\n",
+              "  <div id=\"df-a4941176-92d6-483a-86b9-c9cf8b9e4e5e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1049,7 +1049,7 @@
               "</table>\n",
               "<p>5 rows × 31 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-483e1950-f5c0-42d1-8aca-942b6dc2d500')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a4941176-92d6-483a-86b9-c9cf8b9e4e5e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1100,12 +1100,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-483e1950-f5c0-42d1-8aca-942b6dc2d500 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a4941176-92d6-483a-86b9-c9cf8b9e4e5e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-483e1950-f5c0-42d1-8aca-942b6dc2d500');\n",
+              "          const element = document.querySelector('#df-a4941176-92d6-483a-86b9-c9cf8b9e4e5e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1173,7 +1173,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 45
         }
       ]
     },
@@ -1198,16 +1198,16 @@
           "height": 647
         },
         "id": "6gbQ-SKs0aCE",
-        "outputId": "423317fa-bf02-4c63-cee2-a7464420e987"
+        "outputId": "43d3f964-ba25-4667-9f9e-de4450386675"
       },
-      "execution_count": 27,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-c87627e1-1d6f-4ca2-be0b-1de2d32bcdbb\">\n",
+              "  <div id=\"df-666a6931-f20c-4781-8c97-48f5da402b94\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1375,7 +1375,7 @@
               "</table>\n",
               "<p>5 rows × 31 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c87627e1-1d6f-4ca2-be0b-1de2d32bcdbb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-666a6931-f20c-4781-8c97-48f5da402b94')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1426,12 +1426,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c87627e1-1d6f-4ca2-be0b-1de2d32bcdbb button.colab-df-convert');\n",
+              "          document.querySelector('#df-666a6931-f20c-4781-8c97-48f5da402b94 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c87627e1-1d6f-4ca2-be0b-1de2d32bcdbb');\n",
+              "          const element = document.querySelector('#df-666a6931-f20c-4781-8c97-48f5da402b94');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1499,7 +1499,64 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['sgPartido'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wmDBUEhXedZk",
+        "outputId": "b4ec1ace-57b0-4a68-db31-9474b117b2b2"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PT               71008\n",
+              "PSL              67028\n",
+              "PP               44060\n",
+              "PL               38495\n",
+              "MDB              38487\n",
+              "PSD              36623\n",
+              "PSB              34907\n",
+              "PSDB             34371\n",
+              "REPUBLICANOS     29028\n",
+              "PDT              28706\n",
+              "DEM              27015\n",
+              "PTB              12719\n",
+              "SOLIDARIEDADE    12350\n",
+              "PODE             10574\n",
+              "CIDADANIA         9341\n",
+              "AVANTE            9257\n",
+              "PROS              8599\n",
+              "PSOL              8099\n",
+              "PCdoB             7288\n",
+              "PSC               6991\n",
+              "PATRIOTA          5951\n",
+              "NOVO              5829\n",
+              "PV                3761\n",
+              "PR                1118\n",
+              "REDE               708\n",
+              "PRB                531\n",
+              "S.PART.            377\n",
+              "PPS                225\n",
+              "PATRI              154\n",
+              "PHS                139\n",
+              "PPL                 20\n",
+              "Name: sgPartido, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
         }
       ]
     },
@@ -1524,6 +1581,13 @@
     {
       "cell_type": "markdown",
       "source": [
+        "cpf\n",
+        "\n",
+        "ideDocumento\n",
+        "\n",
+        "urlDocumento\n",
+        "\n",
+        "\n",
         "**1.** **`txNomeParlamentar`** (*Nome Parlamentar*): Nome adotado pelo Parlamentar ao tomar posse do seu mandato. Compõe-se de dois elementos: um prenome e o nome; dois nomes; ou dois prenomes, salvo, a juízo do Presidente da Casa legislativa, que poderá alterar essa regra para que não ocorram confusões.\n",
         "\n",
         "**2.** **`ideCadastro`** (*Identificador Único do Parlamentar*): Número que identifica unicamente um deputado federal na CD.\n",
@@ -2311,6 +2375,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OTuVcDzrU47K",
+        "outputId": "62e5f639-8a01-48f1-a280-6a5740f74890"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "449257677.06"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "\n",
@@ -2789,6 +2879,18 @@
       "metadata": {
         "id": "ygYIWkmuz6tT"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.options.display.float_format = '{:,.2f}'.format\n",
+        "#Caso as variáveis fiquem em notação científica, é só rodar essa janela\n"
+      ],
+      "metadata": {
+        "id": "v-SiYjITVSnC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
